--- a/src/contact.html
+++ b/src/contact.html
@@ -40,30 +40,16 @@
           <div id="navigation" class="nav">
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="./index.html" class="nav__link active">Home</a>
+                <a href="#" class="nav__link active">Home</a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link dropdown">Services</a>
-                <ul class="dropdown__menu">
-                  <li class="nav__item">
-                    <a href="./longboord.html" class="nav__link"
-                      >longboard hire</a
-                    >
-                  </li>
-                  <li class="nav__item">
-                    <a href="./shortborad.html" class="nav__link"
-                      >shortboord hire</a
-                    >
-                  </li>
-                  <li class="nav__item">
-                    <a href="./wetsuits.html" class="nav__link"
-                      >board & wetsuits</a
-                    >
-                  </li>
-                  <li class="nav__item">
-                    <a href="./lessons.html" class="nav__link">lessions</a>
-                  </li>
-                </ul>
+                <a href="./surfboard.html" class="nav__link">Surfboard Hire</a>
+              </li>
+              <li class="nav__item">
+                <a href="./wetsuits.html" class="nav__link">Wetsuit Hire</a>
+              </li>
+              <li class="nav__item">
+                <a href="./lessons.html" class="nav__link">lessons</a>
               </li>
               <li class="nav__item">
                 <a href="./contact.html" class="nav__link">Contact</a>
@@ -204,20 +190,19 @@
             </li>
             <li class="footer__item">
               <a href="./shortborad.html" class="footer__link"
-                >shortbord hire</a
+                >Surfboard hire</a
               >
             </li>
             <li class="footer__item">
-              <a href="./longboord.html" class="footer__link">longboard hire</a>
+              <a href="./wetsuits.html" class="footer__link">Wetsuit hire</a>
             </li>
             <li class="footer__item">
-              <a href="./wetsuits.html" class="footer__link"
-                >surfboard and wetsuit hire</a
-              >
+              <a href="./lessons.html" class="footer__link">surfing lessons</a>
             </li>
-            <li class="footer__item">
-              <a href="./lessons.html" class="footer__link">surfing lessions</a>
-            </li>
+          </ul>
+        </div>
+        <div aria-label="secondary navigation" class="footer__nav secondary">
+          <ul class="footer__list">
             <li class="footer__item">
               <a href="./contact.html" class="footer__link">Contact</a>
             </li>
@@ -234,10 +219,6 @@
             </li>
           </ul>
         </div>
-        <div class="phone" aria-label="phone number">
-          <i class="fa-solid fa-phone"></i>
-          <p>0000000000000</p>
-        </div>
         <address>
           <p>
             Bailey’s surf<br />
@@ -247,27 +228,29 @@
             PLXX 2XX
           </p>
         </address>
-        <div class="social">
-          <a href="#" class="social__link">
-            <i class="fab fa-facebook-square social__icon"></i>
-            <span class="hidden">facebook</span>
-          </a>
-          <a href="#" class="social__link messenger">
-            <i class="fab fa-facebook-messenger social__icon"></i>
-            <span class="hidden">facebook messenger</span>
-          </a>
-          <a href="#" class="social__link twitter">
-            <i class="fab fa-twitter twitter social__icon"></i>
-            <span class="hidden">twitter</span>
-          </a>
-          <a href="#" class="social__link twitter">
-            <i class="fab fa-twitter twitter social__icon"></i>
-            <span class="hidden">twitter</span>
-          </a>
-          <a href="#" class="social__link twitter">
-            <i class="fab fa-instagram instagram social__icon"></i>
-            <span class="hidden">instagram</span>
-          </a>
+        <div class="other__contact">
+          <div class="phone" aria-label="phone number">
+            <i class="fa-solid fa-phone"></i>
+            <p>0000000000000</p>
+          </div>
+          <div class="social">
+            <a href="#" class="social__link">
+              <i class="fab fa-facebook-square social__icon"></i>
+              <span class="hidden">facebook</span>
+            </a>
+            <a href="#" class="social__link messenger">
+              <i class="fab fa-facebook-messenger social__icon"></i>
+              <span class="hidden">facebook messenger</span>
+            </a>
+            <a href="#" class="social__link twitter">
+              <i class="fab fa-twitter twitter social__icon"></i>
+              <span class="hidden">twitter</span>
+            </a>
+            <a href="#" class="social__link twitter">
+              <i class="fab fa-instagram instagram social__icon"></i>
+              <span class="hidden">instagram</span>
+            </a>
+          </div>
         </div>
         <p class="paragraph copyright">&copy; copyright Bailey’s surf 2022</p>
       </div>
