--- a/src/lessons.html
+++ b/src/lessons.html
@@ -7,15 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&family=Prompt:wght@400;500;600&display=swap"
-      rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&family=Prompt:wght@400;500;600&display=swap"
+    rel="stylesheet"
     />
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
-      integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
+    integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="css/style.css" />
     <title>Bailey's Surf - Lessons</title>
@@ -40,7 +40,7 @@
           <div id="navigation" class="nav">
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="#" class="nav__link active">Home</a>
+                <a href="#" class="nav__link ">Home</a>
               </li>
               <li class="nav__item">
                 <a href="./surfboard.html" class="nav__link">Surfboard Hire</a>
@@ -49,12 +49,13 @@
                 <a href="./wetsuits.html" class="nav__link">Wetsuit Hire</a>
               </li>
               <li class="nav__item">
+                <a href="./lessons.html" class="nav__link active" aria-current="page">lessons</a>
+              </li>
+              <li class="nav__item">
                 <a href="./contact.html" class="nav__link">Contact</a>
               </li>
             </ul>
           </div>
-        </nav>
-      </div>
     </header>
     <main class="main">
       <section class="banner">
@@ -187,26 +188,37 @@
       </section>
 
       <section class="testimonials container">
-        <div class="slider" data-slide="1">
-          <div class="slider__controls__prev">
-            <i class="fa-solid fa-chevron-left"></i>
-          </div>
-          <div class="slider__controls__next">
-            <i class="fa-solid fa-chevron-right"></i>
-          </div>
-          <div class="slider__text">
-            <h2 class="slider__name">Wade Warren</h2>
-            <p class="paragraph">
+        <div class="testimonial__cards">
+          <div class="testimonial__card">
+            <div class="testimonial__img">
+              <img src="./assets/profile-1.webp" alt="" />
+            </div>
+            <p class="testimonial__name heading">Wade Warren</p>
+            <p class="card__testimonial paragraph">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
               lectus dolor elit eu porta.
             </p>
           </div>
-        </div>
-        <div class="slider__controls__dots">
-          <div class="dot active"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
+          <div class="testimonial__card">
+            <div class="testimonial__img">
+              <img src="./assets/proflie-2.webp" alt="" />
+            </div>
+            <p class="testimonial__name heading">Cody Fisher</p>
+            <p class="card__testimonial paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+              lectus dolor elit eu porta.
+            </p>
+          </div>
+          <div class="testimonial__card">
+            <div class="testimonial__img">
+              <img src="./assets/profile-3.webp" alt="" />
+            </div>
+            <p class="testimonial__name heading">Cody Fisher</p>
+            <p class="card__testimonial paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+              lectus dolor elit eu porta.
+            </p>
+          </div>
         </div>
       </section>
       <section class="services container">
@@ -260,20 +272,19 @@
             </li>
             <li class="footer__item">
               <a href="./shortborad.html" class="footer__link"
-                >shortbord hire</a
+                >Surfboard hire</a
               >
             </li>
             <li class="footer__item">
-              <a href="./longboord.html" class="footer__link">longboard hire</a>
+              <a href="./wetsuits.html" class="footer__link">Wetsuit hire</a>
             </li>
             <li class="footer__item">
-              <a href="./wetsuits.html" class="footer__link"
-                >surfboard and wetsuit hire</a
-              >
+              <a href="./lessons.html" class="footer__link">surfing lessons</a>
             </li>
-            <li class="footer__item">
-              <a href="./lessons.html" class="footer__link">surfing lessions</a>
-            </li>
+          </ul>
+        </div>
+        <div aria-label="secondary navigation" class="footer__nav secondary">
+          <ul class="footer__list">
             <li class="footer__item">
               <a href="./contact.html" class="footer__link">Contact</a>
             </li>
@@ -290,10 +301,6 @@
             </li>
           </ul>
         </div>
-        <div class="phone" aria-label="phone number">
-          <i class="fa-solid fa-phone"></i>
-          <p>0000000000000</p>
-        </div>
         <address>
           <p>
             Bailey’s surf<br />
@@ -303,23 +310,29 @@
             PLXX 2XX
           </p>
         </address>
-        <div class="social">
-          <a href="#" class="social__link">
-            <i class="fab fa-facebook-square social__icon"></i>
-            <span class="hidden">facebook</span>
-          </a>
-          <a href="#" class="social__link messenger">
-            <i class="fab fa-facebook-messenger social__icon"></i>
-            <span class="hidden">facebook messenger</span>
-          </a>
-          <a href="#" class="social__link twitter">
-            <i class="fab fa-twitter twitter social__icon"></i>
-            <span class="hidden">twitter</span>
-          </a>
-          <a href="#" class="social__link twitter">
-            <i class="fab fa-instagram instagram social__icon"></i>
-            <span class="hidden">instagram</span>
-          </a>
+        <div class="other__contact">
+          <div class="phone" aria-label="phone number">
+            <i class="fa-solid fa-phone"></i>
+            <p>0000000000000</p>
+          </div>
+          <div class="social">
+            <a href="#" class="social__link">
+              <i class="fab fa-facebook-square social__icon"></i>
+              <span class="hidden">facebook</span>
+            </a>
+            <a href="#" class="social__link messenger">
+              <i class="fab fa-facebook-messenger social__icon"></i>
+              <span class="hidden">facebook messenger</span>
+            </a>
+            <a href="#" class="social__link twitter">
+              <i class="fab fa-twitter twitter social__icon"></i>
+              <span class="hidden">twitter</span>
+            </a>
+            <a href="#" class="social__link twitter">
+              <i class="fab fa-instagram instagram social__icon"></i>
+              <span class="hidden">instagram</span>
+            </a>
+          </div>
         </div>
         <p class="paragraph copyright">&copy; copyright Bailey’s surf 2022</p>
       </div>
