--- a/src/wetsuits.html
+++ b/src/wetsuits.html
@@ -40,13 +40,21 @@
           <div id="navigation" class="nav">
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="#" class="nav__link active">Home</a>
+                <a href="#" class="nav__link">Home</a>
               </li>
               <li class="nav__item">
                 <a href="./surfboard.html" class="nav__link">Surfboard Hire</a>
               </li>
               <li class="nav__item">
-                <a href="./wetsuits.html" class="nav__link">Wetsuit Hire</a>
+                <a
+                  href="./wetsuits.html"
+                  class="nav__link active"
+                  aria-current="page"
+                  >Wetsuit Hire</a
+                >
+              </li>
+              <li class="nav__item">
+                <a href="./lessons.html" class="nav__link">lessons</a>
               </li>
               <li class="nav__item">
                 <a href="./contact.html" class="nav__link">Contact</a>
@@ -199,37 +207,44 @@
       </section>
 
       <section class="testimonials container">
-        <div class="slider" data-slide="1">
-          <div class="slider__controls__prev">
-            <i class="fa-solid fa-chevron-left"></i>
+        <div class="testimonial__cards">
+          <div class="testimonial__card">
+            <div class="testimonial__img">
+              <img src="./assets/profile-1.webp" alt="" />
+            </div>
+            <p class="testimonial__name heading">Wade Warren</p>
+            <p class="card__testimonial paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+              lectus dolor elit eu porta.
+            </p>
           </div>
-          <div class="slider__controls__next">
-            <i class="fa-solid fa-chevron-right"></i>
+          <div class="testimonial__card">
+            <div class="testimonial__img">
+              <img src="./assets/proflie-2.webp" alt="" />
+            </div>
+            <p class="testimonial__name heading">Cody Fisher</p>
+            <p class="card__testimonial paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+              lectus dolor elit eu porta.
+            </p>
           </div>
-          <div class="slider__text">
-            <h2 class="slider__name">Wade Warren</h2>
-            <p class="paragraph">
+          <div class="testimonial__card">
+            <div class="testimonial__img">
+              <img src="./assets/profile-3.webp" alt="" />
+            </div>
+            <p class="testimonial__name heading">Cody Fisher</p>
+            <p class="card__testimonial paragraph">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
               lectus dolor elit eu porta.
             </p>
           </div>
         </div>
-        <div class="slider__controls__dots">
-          <div class="dot active"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
-        </div>
       </section>
       <section class="services container">
         <div class="cards">
           <div class="card longboard">
-            <h2 class="heading card--heading">Longboard hire</h2>
+            <h2 class="heading card--heading">Surfboard Hire</h2>
             <a href="./longboord.html" class="card__link">find out more</a>
-          </div>
-          <div class="card shortboard">
-            <h2 class="heading card--heading">Shortboard hire</h2>
-            <a href="./shortborad.html" class="card__link">find out more</a>
           </div>
           <div class="card lessons">
             <h2 class="heading card--heading">Lessons</h2>
@@ -272,20 +287,19 @@
             </li>
             <li class="footer__item">
               <a href="./shortborad.html" class="footer__link"
-                >shortbord hire</a
+                >Surfboard hire</a
               >
             </li>
             <li class="footer__item">
-              <a href="./longboord.html" class="footer__link">longboard hire</a>
+              <a href="./wetsuits.html" class="footer__link">Wetsuit hire</a>
             </li>
             <li class="footer__item">
-              <a href="./wetsuits.html" class="footer__link"
-                >surfboard and wetsuit hire</a
-              >
+              <a href="./lessons.html" class="footer__link">surfing lessons</a>
             </li>
-            <li class="footer__item">
-              <a href="./lessons.html" class="footer__link">surfing lessions</a>
-            </li>
+          </ul>
+        </div>
+        <div aria-label="secondary navigation" class="footer__nav secondary">
+          <ul class="footer__list">
             <li class="footer__item">
               <a href="./contact.html" class="footer__link">Contact</a>
             </li>
@@ -302,10 +316,6 @@
             </li>
           </ul>
         </div>
-        <div class="phone" aria-label="phone number">
-          <i class="fa-solid fa-phone"></i>
-          <p>0000000000000</p>
-        </div>
         <address>
           <p>
             Bailey’s surf<br />
@@ -315,23 +325,29 @@
             PLXX 2XX
           </p>
         </address>
-        <div class="social">
-          <a href="#" class="social__link">
-            <i class="fab fa-facebook-square social__icon"></i>
-            <span class="hidden">facebook</span>
-          </a>
-          <a href="#" class="social__link messenger">
-            <i class="fab fa-facebook-messenger social__icon"></i>
-            <span class="hidden">facebook messenger</span>
-          </a>
-          <a href="#" class="social__link twitter">
-            <i class="fab fa-twitter twitter social__icon"></i>
-            <span class="hidden">twitter</span>
-          </a>
-          <a href="#" class="social__link twitter">
-            <i class="fab fa-instagram instagram social__icon"></i>
-            <span class="hidden">instagram</span>
-          </a>
+        <div class="other__contact">
+          <div class="phone" aria-label="phone number">
+            <i class="fa-solid fa-phone"></i>
+            <p>0000000000000</p>
+          </div>
+          <div class="social">
+            <a href="#" class="social__link">
+              <i class="fab fa-facebook-square social__icon"></i>
+              <span class="hidden">facebook</span>
+            </a>
+            <a href="#" class="social__link messenger">
+              <i class="fab fa-facebook-messenger social__icon"></i>
+              <span class="hidden">facebook messenger</span>
+            </a>
+            <a href="#" class="social__link twitter">
+              <i class="fab fa-twitter twitter social__icon"></i>
+              <span class="hidden">twitter</span>
+            </a>
+            <a href="#" class="social__link twitter">
+              <i class="fab fa-instagram instagram social__icon"></i>
+              <span class="hidden">instagram</span>
+            </a>
+          </div>
         </div>
         <p class="paragraph copyright">&copy; copyright Bailey’s surf 2022</p>
       </div>
