--- a/src/wetsuits.html
+++ b/src/wetsuits.html
@@ -207,6 +207,7 @@
       </section>
 
       <section class="testimonials container">
+        <h2 class="heading heading--l">Testimonials</h2>
         <div class="testimonial__cards">
           <div class="testimonial__card">
             <div class="testimonial__img">
@@ -237,6 +238,22 @@
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
               lectus dolor elit eu porta.
             </p>
+          </div>
+        </div>
+      </section>
+      <section class="services container">
+        <div class="home__cards">
+          <div class="home__card longboard">
+            <h2 class="heading card--heading">Surfboard hire</h2>
+            <a href="./surfboard.html" class="card__link">find out more</a>
+          </div>
+          <div class="home__card wetsuits">
+            <h2 class="heading card--heading">Wetsuit hire</h2>
+            <a href="./wetsuits.html" class="card__link">find out more</a>
+          </div>
+          <div class="home__card lessons">
+            <h2 class="heading card--heading">Surfing lessons</h2>
+            <a href="./lessons.html" class="card__link">find out more</a>
           </div>
         </div>
       </section>
