--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,7 @@
       </section>
 
       <section class="testimonials container">
+        <h2 class="heading heading--l">Testimonials</h2>
         <div class="testimonial__cards">
           <div class="testimonial__card">
             <div class="testimonial__img">
