--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,14 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Bailey's Surf</title>
+    <title>Surfer’s Paradise</title>
   </head>
   <body>
     <header class="header">
       <div class="container">
-        <div class="logo"></div>
+        <a href="./index.html" class="logo__link">
+          <div class="logo"></div>
+        </a>
         <nav class="navbar">
           <button
             class="hamburger hamburger--vortex"
@@ -40,9 +42,7 @@
           <div id="navigation" class="nav">
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="#" class="nav__link active" aria-current="page"
-                  >Home</a
-                >
+                <a href="#" class="nav__link active">Home</a>
               </li>
               <li class="nav__item">
                 <a href="./surfboard.html" class="nav__link">Surfboard Hire</a>
@@ -101,7 +101,7 @@
       </section>
 
       <section class="testimonials container">
-        <h2 class="heading heading--l">Testimonials</h2>
+        <h2 class="heading heading--l">What our customers think</h2>
         <div class="testimonial__cards">
           <div class="testimonial__card">
             <div class="testimonial__img">
@@ -153,7 +153,7 @@
       </section>
       <section class="faq container">
         <h2 class="heading faq--heading heading--l">Faq</h2>
-        <div class="faq__content">
+        <div class="faq__content home--faq">
           <ul class="faq__list">
             <li>
               <button
@@ -227,8 +227,6 @@
           <iframe
             class="iframe__map"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10619.674698121213!2d-5.109173570012214!3d50.41578570724579!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486b0fc5eaf76b0f%3A0xb9cac4894733be3d!2sFistral%20Beach!5e0!3m2!1sen!2suk!4v1649621153181!5m2!1sen!2suk"
-            width="600"
-            height="450"
             style="border: 0"
             allowfullscreen=""
             loading="lazy"
