--- a/src/lessons.html
+++ b/src/lessons.html
@@ -71,54 +71,82 @@
         </div>
         <p class="heading banner--heading">Lessons</p>
       </section>
-      <section class="about__lessons container">
-        <h2 class="heading heading--l">About surfing lessons</h2>
-        <p class="paragraph">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et phasellus
-          dolor enim et lectus donec in augue. Velit sit magna sagittis magnis
-          gravida amet, mauris semper accumsan. Eleifend pellentesque turpis
-          tellus amet, lacinia nunc felis vel. Et, ante orci, adipiscing
-          hendrerit.
-        </p>
+      <section class="about container">
+        <div class="about__text">
+          <h2 class="heading heading--l">About Lessons</h2>
+          <p class="paragraph">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque,
+            eos. Laboriosam, aliquid quidem obcaecati corrupti dicta adipisci et
+            inventore unde. Et illo nihil eius fugit consequuntur numquam ullam
+            voluptatum in. Rerum quia consectetur molestiae illo provident
+            incidunt, similique neque ipsa non quo animi nam sed, dolor in
+            consequatur? Quia tenetur nisi commodi fuga. Dolorem expedita
+            quisquam, omnis repudiandae adipisci, deserunt nisi ab tempore
+            assumenda, nulla a quo ad temporibus. Velit eaque asperiores illo
+            nisi. Totam pariatur delectus, facere ut veniam, earum porro
+            tempore, inventore error esse qui tenetur accusantium natus odio!
+            Aut optio corrupti dolorum. Corrupti obcaecati voluptatem autem
+            dolorum aliquam magni et delectus, odio iusto earum eaque cumque.
+          </p>
+        </div>
+        <div class="about__imgs">
+          <img src="./assets/longboard.webp" alt="" />
+          <img class="col-2" src="./assets/pricing-board.jpg" alt="" />
+          <img src="./assets/about-img-3.webp" alt="" />
+        </div>
       </section>
       <section class="pricing container">
         <h2 class="heading heading--l">Pricing</h2>
-        <table class="table">
-          <tr>
-            <td class="time">2 hours</td>
-            <td class="price">£29.99</td>
-          </tr>
-          <tr>
-            <td class="time">2 lessons a month</td>
-            <td class="price">£38.99</td>
-          </tr>
-          <tr>
-            <td class="time">3 lessons a month</td>
-            <td class="price">£45.99</td>
-          </tr>
-          <tr>
-            <td class="time">4 lessons a month</td>
-            <td class="price">£55.99</td>
-          </tr>
-        </table>
+        <div class="pricing__content">
+
+          <table class="table">
+            <tr>
+              <td class="time">2 hours</td>
+              <td class="price">£29.99</td>
+            </tr>
+            <tr>
+              <td class="time">2 lessons a month</td>
+              <td class="price">£38.99</td>
+            </tr>
+            <tr>
+              <td class="time">3 lessons a month</td>
+              <td class="price">£45.99</td>
+            </tr>
+            <tr>
+              <td class="time">4 lessons a month</td>
+              <td class="price">£55.99</td>
+            </tr>
+          </table>
+          <div class="pricing__img">
+            <img src="./assets/lessons.webp" alt="" />
+          </div>
+        </div>
       </section>
 
       <section class="faq container">
         <h2 class="heading faq--heading heading--l">Faq</h2>
         <div class="faq__content">
+          <lottie-player
+            class="lottie lottie__faq"
+            src="./assets/lf30_editor_bygesmxx.json"
+            background="transparent"
+            speed="1"
+            loop
+            autoplay
+          ></lottie-player>
           <ul class="faq__list">
             <li>
               <button
-                class="faq__btn"
+                class="faq__btn active"
                 aria-expanded="false"
                 aria-controls="question-one
               "
               >
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.<i
-                  class="fa-solid fa-chevron-down"
+                  class="fa-solid fa-chevron-up"
                 ></i>
               </button>
-              <p class="paragraph faq__paragraph" id="question-one">
+              <p class="paragraph faq__paragraph active" id="question-one">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas
                 tellus dictumst eget rutrum maecenas habitant senectus.
                 Facilisis vestibulum.
@@ -132,7 +160,7 @@
               "
               >
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.<i
-                  class="fa-solid fa-chevron-down"
+                  class="fa-solid fa-chevron-up"
                 ></i>
               </button>
               <p class="paragraph faq__paragraph" id="question-two">
@@ -149,7 +177,7 @@
               "
               >
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.<i
-                  class="fa-solid fa-chevron-down"
+                  class="fa-solid fa-chevron-up"
                 ></i>
               </button>
               <p class="paragraph faq__paragraph" id="question-three">
@@ -166,7 +194,7 @@
               "
               >
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.<i
-                  class="fa-solid fa-chevron-down"
+                  class="fa-solid fa-chevron-up"
                 ></i>
               </button>
               <p class="paragraph faq__paragraph" id="question-four">
@@ -176,18 +204,11 @@
               </p>
             </li>
           </ul>
-          <lottie-player
-            class="lottie"
-            src="./assets/lf30_editor_bygesmxx.json"
-            background="transparent"
-            speed="1"
-            loop
-            autoplay
-          ></lottie-player>
         </div>
       </section>
 
       <section class="testimonials container">
+        <h2 class="heading heading--l">What our customers think</h2>
         <div class="testimonial__cards">
           <div class="testimonial__card">
             <div class="testimonial__img">
@@ -224,42 +245,49 @@
       <section class="services container">
         <div class="cards">
           <div class="card longboard">
-            <h2 class="heading card--heading">Longboard</h2>
-            <a href="./longboord.html" class="card__link">find out more</a>
-          </div>
-          <div class="card shortboard">
-            <h2 class="heading card--heading">Shortboard</h2>
-            <a href="./shortborad.html" class="card__link">find out more</a>
+            <h2 class="heading card--heading">Surfboard hire</h2>
+            <a href="./surfboard.html" class="card__link">find out more</a>
           </div>
           <div class="card wetsuits">
-            <h2 class="heading card--heading">Surfboard and Wetsuit hire</h2>
+            <h2 class="heading card--heading">Wetsuit hire</h2>
             <a href="./wetsuits.html" class="card__link">find out more</a>
           </div>
         </div>
       </section>
+      </section>
 
       <section class="contact container">
         <h2 class="heading heading--l">Contact us</h2>
-        <form class="form" action="#">
-          <div class="form__group">
-            <label for="name" class="contact__label">name</label>
-            <input type="text" name="name" />
-          </div>
-          <div class="form__group">
-            <label for="email" class="contact__label">email</label>
-            <input type="email" name="email" />
-          </div>
-          <div class="form__group">
-            <label for="message" class="contact__label">message</label>
-            <textarea
-              name="message"
-              class="contact__message"
-              cols="30"
-              rows="10"
-            ></textarea>
-          </div>
-          <button class="btn">Send</button>
-        </form>
+        <div class="contact__content">
+          <form class="form" action="#">
+            <div class="form__group">
+              <label for="name" class="contact__label">name</label>
+              <input type="text" name="name" />
+            </div>
+            <div class="form__group">
+              <label for="email" class="contact__label">email</label>
+              <input type="email" name="email" />
+            </div>
+            <div class="form__group">
+              <label for="message" class="contact__label">message</label>
+              <textarea
+                name="message"
+                class="contact__message"
+                cols="30"
+                rows="15"
+              ></textarea>
+            </div>
+            <button type="submit" class="btn">Send</button>
+          </form>
+          <lottie-player
+            class="lottie watermelon"
+            src="./assets/62581-watermelon-enjoying-surfing-water.json"
+            background="transparent"
+            speed="1"
+            loop
+            autoplay
+          ></lottie-player>
+        </div>
       </section>
     </main>
     <footer class="footer">
