--- a/src/wetsuits.html
+++ b/src/wetsuits.html
@@ -18,12 +18,14 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Bailey's Surf - board & wetsuit hire</title>
+    <title>Surfer’s Paradise - Wetsuit hire</title>
   </head>
   <body>
     <header class="header">
       <div class="container">
-        <div class="logo"></div>
+        <a href="./index.html" class="logo__link">
+          <div class="logo"></div>
+        </a>
         <nav class="navbar">
           <button
             class="hamburger hamburger--vortex"
@@ -40,7 +42,7 @@
           <div id="navigation" class="nav">
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="#" class="nav__link">Home</a>
+                <a href="./index.html" class="nav__link">Home</a>
               </li>
               <li class="nav__item">
                 <a href="./surfboard.html" class="nav__link">Surfboard Hire</a>
@@ -54,7 +56,7 @@
                 >
               </li>
               <li class="nav__item">
-                <a href="./lessons.html" class="nav__link">lessons</a>
+                <a href="./lessons.html" class="nav__link">Lessons</a>
               </li>
               <li class="nav__item">
                 <a href="./contact.html" class="nav__link">Contact</a>
@@ -76,68 +78,110 @@
         <div class="banner__text">
           <h1 class="heading heading--xxl">Surfer’s Paradise</h1>
         </div>
-        <p class="heading banner--heading">surfboard & wetsuit hire</p>
+        <p class="heading banner--heading">Wetsuit hire</p>
       </section>
+      <section class="about container">
+        <div class="about__text">
+          <h2 class="heading heading--l">About Wetsuit's</h2>
+          <p class="paragraph">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque,
+            eos. Laboriosam, aliquid quidem obcaecati corrupti dicta adipisci et
+            inventore unde. Et illo nihil eius fugit consequuntur numquam ullam
+            voluptatum in. Rerum quia consectetur molestiae illo provident
+            incidunt, similique neque ipsa non quo animi nam sed, dolor in
+            consequatur? Quia tenetur nisi commodi fuga. Dolorem expedita
+            quisquam, omnis repudiandae adipisci, deserunt nisi ab tempore
+            assumenda, nulla a quo ad temporibus. Velit eaque asperiores illo
+            nisi. Totam pariatur delectus, facere ut veniam, earum porro
+            tempore, inventore error esse qui tenetur accusantium natus odio!
+            Aut optio corrupti dolorum. Corrupti obcaecati voluptatem autem
+            dolorum aliquam magni et delectus, odio iusto earum eaque cumque.
+          </p>
+        </div>
+        <div class="about__imgs">
+          <img src="./assets/longboard.webp" alt="" />
+          <img class="col-2" src="./assets/pricing-board.jpg" alt="" />
+          <img src="./assets/about-img-3.webp" alt="" />
+        </div>
+      </section>
+      <section class="pricing container">
+        <h2 class="heading heading--l">Wetsuit hiring</h2>
+        <div class="pricing__content">
 
-      <section class="pricing container">
-        <h2 class="heading heading--l">Pricing</h2>
-        <table class="table">
-          <tr>
-            <td class="time">1 hour</td>
-            <td class="price">£7.99</td>
-          </tr>
-          <tr>
-            <td class="time">2 hours</td>
-            <td class="price">£12.99</td>
-          </tr>
-          <tr>
-            <td class="time">4 hours</td>
-            <td class="price">£17.99</td>
-          </tr>
-          <tr>
-            <td class="time">6 hours</td>
-            <td class="price">£22.99</td>
-          </tr>
-        </table>
-      </section>
-      <section class="pricing container">
-        <h2 class="heading heading--l">Just need a wetsuit</h2>
-        <table class="table">
-          <tr>
-            <td class="time">1 hour</td>
-            <td class="price">£3.99</td>
-          </tr>
-          <tr>
-            <td class="time">2 hours</td>
-            <td class="price">£4.99</td>
-          </tr>
-          <tr>
-            <td class="time">4 hours</td>
-            <td class="price">£6.99</td>
-          </tr>
-          <tr>
-            <td class="time">6 hours</td>
-            <td class="price">£8.99</td>
-          </tr>
-        </table>
+          <table class="table">
+            <tr>
+              <td class="time">1 hour</td>
+              <td class="price">£3.99</td>
+            </tr>
+            <tr>
+              <td class="time">2 hours</td>
+              <td class="price">£4.99</td>
+            </tr>
+            <tr>
+              <td class="time">4 hours</td>
+              <td class="price">£6.99</td>
+            </tr>
+            <tr>
+              <td class="time">6 hours</td>
+              <td class="price">£8.99</td>
+            </tr>
+          </table>
+          <div class="pricing__img">
+            <img src="./assets/wetsuit.webp" alt="" />
+          </div>
+        </section>
+  
+        <section class="pricing container">
+          <h2 class="heading heading--l">Need a board as well</h2>
+          <div class="pricing__content">
+            <table class="table">
+              <tr>
+                <td class="time">1 hour</td>
+                <td class="price">£7.99</td>
+              </tr>
+              <tr>
+                <td class="time">2 hours</td>
+                <td class="price">£12.99</td>
+              </tr>
+              <tr>
+                <td class="time">4 hours</td>
+                <td class="price">£17.99</td>
+              </tr>
+              <tr>
+                <td class="time">6 hours</td>
+                <td class="price">£22.99</td>
+              </tr>
+            </table>
+            <div class="pricing__img">
+              <img src="./assets/wetsuit+sufboard.webp" alt="" />
+            </div>
+          </div>
       </section>
 
       <section class="faq container">
         <h2 class="heading faq--heading heading--l">Faq</h2>
         <div class="faq__content">
+          <lottie-player
+            class="lottie lottie__faq"
+            src="./assets/lf30_editor_bygesmxx.json"
+            background="transparent"
+            speed="1"
+            loop
+            autoplay
+          ></lottie-player>
           <ul class="faq__list">
             <li>
               <button
-                class="faq__btn"
+                class="faq__btn active"
                 aria-expanded="false"
                 aria-controls="question-one
               "
               >
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.<i
-                  class="fa-solid fa-chevron-down"
+                  class="fa-solid fa-chevron-up"
                 ></i>
               </button>
-              <p class="paragraph faq__paragraph" id="question-one">
+              <p class="paragraph faq__paragraph active" id="question-one">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas
                 tellus dictumst eget rutrum maecenas habitant senectus.
                 Facilisis vestibulum.
@@ -151,7 +195,7 @@
               "
               >
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.<i
-                  class="fa-solid fa-chevron-down"
+                  class="fa-solid fa-chevron-up"
                 ></i>
               </button>
               <p class="paragraph faq__paragraph" id="question-two">
@@ -168,7 +212,7 @@
               "
               >
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.<i
-                  class="fa-solid fa-chevron-down"
+                  class="fa-solid fa-chevron-up"
                 ></i>
               </button>
               <p class="paragraph faq__paragraph" id="question-three">
@@ -185,7 +229,7 @@
               "
               >
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.<i
-                  class="fa-solid fa-chevron-down"
+                  class="fa-solid fa-chevron-up"
                 ></i>
               </button>
               <p class="paragraph faq__paragraph" id="question-four">
@@ -195,19 +239,11 @@
               </p>
             </li>
           </ul>
-          <lottie-player
-            class="lottie"
-            src="./assets/lf30_editor_bygesmxx.json"
-            background="transparent"
-            speed="1"
-            loop
-            autoplay
-          ></lottie-player>
         </div>
       </section>
 
       <section class="testimonials container">
-        <h2 class="heading heading--l">Testimonials</h2>
+        <h2 class="heading heading--l">What our customers think</h2>
         <div class="testimonial__cards">
           <div class="testimonial__card">
             <div class="testimonial__img">
@@ -242,26 +278,10 @@
         </div>
       </section>
       <section class="services container">
-        <div class="home__cards">
-          <div class="home__card longboard">
-            <h2 class="heading card--heading">Surfboard hire</h2>
-            <a href="./surfboard.html" class="card__link">find out more</a>
-          </div>
-          <div class="home__card wetsuits">
-            <h2 class="heading card--heading">Wetsuit hire</h2>
-            <a href="./wetsuits.html" class="card__link">find out more</a>
-          </div>
-          <div class="home__card lessons">
-            <h2 class="heading card--heading">Surfing lessons</h2>
-            <a href="./lessons.html" class="card__link">find out more</a>
-          </div>
-        </div>
-      </section>
-      <section class="services container">
         <div class="cards">
           <div class="card longboard">
-            <h2 class="heading card--heading">Surfboard Hire</h2>
-            <a href="./longboord.html" class="card__link">find out more</a>
+            <h2 class="heading card--heading">Surfboard hire</h2>
+            <a href="./surfboard.html" class="card__link">find out more</a>
           </div>
           <div class="card lessons">
             <h2 class="heading card--heading">Lessons</h2>
@@ -272,26 +292,36 @@
 
       <section class="contact container">
         <h2 class="heading heading--l">Contact us</h2>
-        <form class="form" action="#">
-          <div class="form__group">
-            <label for="name" class="contact__label">name</label>
-            <input type="text" name="name" />
-          </div>
-          <div class="form__group">
-            <label for="email" class="contact__label">email</label>
-            <input type="email" name="email" />
-          </div>
-          <div class="form__group">
-            <label for="message" class="contact__label">message</label>
-            <textarea
-              name="message"
-              class="contact__message"
-              cols="30"
-              rows="10"
-            ></textarea>
-          </div>
-          <button class="btn">Send</button>
-        </form>
+        <div class="contact__content">
+          <form class="form" action="#">
+            <div class="form__group">
+              <label for="name" class="contact__label">name</label>
+              <input type="text" name="name" />
+            </div>
+            <div class="form__group">
+              <label for="email" class="contact__label">email</label>
+              <input type="email" name="email" />
+            </div>
+            <div class="form__group">
+              <label for="message" class="contact__label">message</label>
+              <textarea
+                name="message"
+                class="contact__message"
+                cols="30"
+                rows="15"
+              ></textarea>
+            </div>
+            <button type="submit" class="btn">Send</button>
+          </form>
+          <lottie-player
+            class="lottie watermelon"
+            src="./assets/62581-watermelon-enjoying-surfing-water.json"
+            background="transparent"
+            speed="1"
+            loop
+            autoplay
+          ></lottie-player>
+        </div>
       </section>
     </main>
     <footer class="footer">
