add id to form labels

--- a/public/index.html
+++ b/public/index.html
@@ -239,15 +239,17 @@
         <div class="contact__content">
           <form class="form" action="#">
             <div class="form__group">
-              <label for="name" class="contact__label">name</label>
+              <label for="name" id="name" class="contact__label">name</label>
               <input type="text" name="name" />
             </div>
             <div class="form__group">
-              <label for="email" class="contact__label">email</label>
+              <label for="email" id="email" class="contact__label">email</label>
               <input type="email" name="email" />
             </div>
             <div class="form__group">
-              <label for="message" class="contact__label">message</label>
+              <label for="message" id="message" class="contact__label"
+                >message</label
+              >
               <textarea
                 name="message"
                 class="contact__message"
